[gd_scene load_steps=11 format=2]

[ext_resource path="res://lib/PixelPlanets/Planets/IceWorld/IceWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/game/Planet/Planet.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/ui/ResourceMenu/ResourceMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/game/Planet/Menu.gd" type="Script" id=4]
[ext_resource path="res://assets/Sprites/UI/rounded_rect.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/Sprites/UI/arrow.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/InteractButton:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/InteractButton:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Planet" type="Node2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="Visual" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="Planet" parent="Visual" instance=ExtResource( 1 )]
margin_left = -25.0
margin_top = -25.0
margin_right = -25.0
margin_bottom = -25.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2

[node name="Menu" type="Control" parent="Visual"]
show_behind_parent = true
margin_left = -64.0
margin_top = -56.0
margin_right = 896.0
margin_bottom = 484.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceMenu" parent="Visual/Menu" instance=ExtResource( 3 )]
margin_left = 256.0
margin_top = 32.0
margin_right = -704.0
margin_bottom = -508.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="PlanetInfo" type="Node2D" parent="Visual/Menu"]
position = Vector2( 128, 128 )

[node name="Background" type="Panel" parent="Visual/Menu/PlanetInfo"]
modulate = Color( 0.215686, 0.203922, 0.435294, 1 )
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
margin_bottom = 384.0
mouse_filter = 2
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetName" type="RichTextLabel" parent="Visual/Menu/PlanetInfo"]
margin_left = -96.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 73.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Planet Name[/center]"
text = "Planet Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetType" type="RichTextLabel" parent="Visual/Menu/PlanetInfo"]
margin_left = -80.0
margin_top = 78.0
margin_right = 120.0
margin_bottom = 123.0
rect_scale = Vector2( 0.8, 0.8 )
rect_clip_content = false
hint_tooltip = "bchfghjcgfdbgcfhjdkcfgdshkjafdsk"
mouse_filter = 1
bbcode_enabled = true
bbcode_text = "[center]Planet Type[/center]"
text = "Planet Type"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resources" type="Node2D" parent="Visual/Menu/PlanetInfo"]

[node name="Background" type="Panel" parent="Visual/Menu/PlanetInfo/Resources"]
modulate = Color( 1, 1, 1, 0.0941176 )
margin_left = -72.0
margin_top = 120.0
margin_right = 72.0
margin_bottom = 240.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Visual/Menu/PlanetInfo/Resources"]
margin_left = -88.0
margin_top = 123.0
margin_right = 108.0
margin_bottom = 147.0
rect_scale = Vector2( 0.9, 0.9 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Available resources:[/center]"
text = "Available resources:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceList" type="ScrollContainer" parent="Visual/Menu/PlanetInfo/Resources"]
margin_left = -64.0
margin_top = 152.0
margin_right = 64.0
margin_bottom = 232.0
grow_horizontal = 2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Visual/Menu/PlanetInfo/Resources/ResourceList"]
margin_right = 128.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelButton" type="Button" parent="Visual/Menu/PlanetInfo"]
margin_left = -77.8491
margin_top = 304.0
margin_right = 79.1509
margin_bottom = 337.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="Visual/Menu/PlanetInfo/TravelButton"]
modulate = Color( 1, 1, 1, 0.0941176 )
show_behind_parent = true
margin_left = -1.0
margin_top = 1.79868
margin_right = 158.0
margin_bottom = 33.7987
mouse_filter = 2
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Visual/Menu/PlanetInfo/TravelButton"]
margin_left = 2.0
margin_top = 5.0
margin_right = 174.0
margin_bottom = 33.0
rect_scale = Vector2( 0.9, 0.9 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Travel to this planet[/center]"
text = "Travel to this planet"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="Visual/Menu/PlanetInfo/TravelButton"]
margin_left = -11.0
margin_top = 39.434
margin_right = 226.0
margin_bottom = 76.434
rect_scale = Vector2( 0.75, 0.75 )
bbcode_enabled = true
bbcode_text = "[center]You are already on this planet[/center]"
text = "You are already on this planet"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Visual/Menu"]

[node name="HoverLabel" type="RichTextLabel" parent="Visual"]
modulate = Color( 0.635294, 0.635294, 0.635294, 1 )
margin_left = -188.0
margin_top = -66.0
margin_right = 62.0
margin_bottom = -26.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]PLANET NAME[/center]"
text = "PLANET NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresenceIndicator" type="Sprite" parent="Visual"]
position = Vector2( 0, -53.6182 )
rotation = 2.35619
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 6 )

[node name="InteractButton" type="Button" parent="Visual"]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="Visual"]
position = Vector2( 176, 80 )
zoom = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
anims/MenuFadeIn = SubResource( 3 )
anims/MenuFadeOut = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]
